@@ -235,14 +235,14 @@ emitcode (const char *inst, const char *fmt, ...)
       dbuf_tvprintf (&dbuf, fmt, ap);
     }
 
-  lbp = lb = dbuf_c_str (&dbuf);
+  lbp = lb = dbuf_detach_c_str (&dbuf);
 
   while (isspace ((unsigned char) *lbp))
     {
       lbp++;
     }
 
-  if (lbp)
+  if (lbp && *lbp)
     {
       lineCurr = (lineCurr ? connectLine (lineCurr, newLineNode (lb)) : (lineHead = newLineNode (lb)));
 
@@ -252,10 +252,9 @@ emitcode (const char *inst, const char *fmt, ...)
       lineCurr->aln = ds390newAsmLineNode (_currentDPS);
       lineCurr->isComment = (*lbp == ';');
     }
+  dbuf_free (lb);
 
   va_end (ap);
-
-  dbuf_destroy (&dbuf);
 }
 
 static void
@@ -14496,5 +14495,4 @@ gen390Code (iCode * lic)
 
   /* now do the actual printing */
   printLine (lineHead, codeOutBuf);
-  return;
 }
