@@ -1,8 +1,8 @@
 /*
   dbuf_string.h - Append formatted string to the dynamic buffer
-  version 1.2.1, August 9th, 2000
+  version 1.2.2, March 20th, 2012
 
-  Copyright (c) 2002-2009 Borut Razem
+  Copyright (c) 2002-2012 Borut Razem
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -56,7 +56,7 @@ int dbuf_append_char(struct dbuf_s *dbuf, char chr);
 int dbuf_vprintf(struct dbuf_s *dbuf, const char *format, va_list args);
 int dbuf_printf (struct dbuf_s *dbuf, const char *format, ...) ATTRIBUTE_PRINTF(2, 3);
 size_t dbuf_getline(struct dbuf_s *dbuf, FILE *infp);
-int dbuf_chomp (struct dbuf_s *dbuf);
+size_t dbuf_chomp (struct dbuf_s *dbuf);
 void dbuf_write (struct dbuf_s *dbuf, FILE *dest);
 void dbuf_write_and_destroy (struct dbuf_s *dbuf, FILE *dest);
 
